load("//tools:spv.bzl", "spv_fragment", "spv_library", "spv_vertex")

filegroup(
    name = "glsl",
    srcs = glob([
        "*.glsl",
    ]),
    visibility = [
        "//examples/render_texture:__subpackages__",
    ],
)

spv_vertex(
    name = "cube_vert",
    src = "cube.vert.glsl",
    entry = "cube_vert",
)

spv_fragment(
    name = "cube_frag",
    src = "cube.frag.glsl",
    entry = "cube_frag",
)

spv_vertex(
    name = "quad_vert",
    src = "quad.vert.glsl",
    entry = "quad_vert",
)

spv_fragment(
    name = "quad_frag",
    src = "quad.frag.glsl",
    entry = "quad_frag",
)

spv_library(
    name = "shader_spv",
    srcs = [
        ":cube_frag",
        ":cube_vert",
        ":quad_frag",
        ":quad_vert",
    ],
    out = "shader.spv",
    visibility = [
        "//examples/render_texture:__subpackages__",
    ],
)
