load("//tools:spv.bzl", "spv_library")

filegroup(
    name = "glsl",
    srcs = glob([
        "*.glsl",
    ]),
    visibility = [
        "//examples/triangle:__subpackages__",
    ],
)

spv_library(
    name = "shader.spv",
    out = "shader.spv",
    frag = "shader.frag.glsl",
    vert = "shader.vert.glsl",
    visibility = [
        "//examples/triangle:__subpackages__",
    ],
)
