load("//tools:crystal.bzl", "crystal_library")
load("//tools:metal.bzl", "metal_library")
load("//tools:spv.bzl", "spv_fragment", "spv_library", "spv_vertex")

crystal_library(
    name = "shader",
    src = "shader.crystal",
    visibility = [
        "//examples/triangle:__subpackages__",
    ],
)

filegroup(
    name = "glsl",
    srcs = glob([
        "*.glsl",
    ]),
    visibility = [
        "//examples/triangle:__subpackages__",
    ],
)

spv_vertex(
    name = "shader_vert",
    src = "shader.vert.glsl",
    entry = "triangle_vert",
)

spv_fragment(
    name = "shader_frag",
    src = "shader.frag.glsl",
    entry = "triangle_frag",
)

spv_library(
    name = "shader_spv",
    srcs = [
        ":shader_frag",
        ":shader_vert",
    ],
    out = "shader.spv",
    visibility = [
        "//examples/triangle:__subpackages__",
    ],
)

metal_library(
    name = "shader_metal",
    srcs = [
        "shader.metal",
    ],
    out = "shader.metallib",
    visibility = [
        "//examples/triangle:__subpackages__",
    ],
)
