load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "decl",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
    deps = [
        "//crystal/compiler/ast:module_hdr",
        "//crystal/compiler/ast/output",
        "//crystal/compiler/ast/stmt",
        "//crystal/compiler/ast/type",
        "//util/memory",
        "//util/msg",
        "@com_google_absl//absl/container:flat_hash_map",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
)
