load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "expr",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
    deps = [
        "//crystal/compiler/ast:module_hdr",
        "//crystal/compiler/ast/decl",
        "//crystal/compiler/ast/output",
        "@mundane//util/memory",
        "@mundane//util/msg",
    ],
)

cc_library(
    name = "hdrs",
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
)
