load("//tools:cc.bzl", "cc_library")

cc_library(
    name = "output",
    srcs = glob([
        "*.cpp",
    ]),
    hdrs = glob([
        "*.hpp",
    ]),
    visibility = [
        "//crystal/compiler:__subpackages__",
    ],
    deps = [
        "//crystal/common",
        "//crystal/common/proto",
        "//crystal/compiler/ast/decl:hdrs",
        "//crystal/compiler/ast/stmt:hdrs",
        "//crystal/compiler/ast/type:hdrs",
        "//util/memory",
        "//util/msg",
    ],
)
